feat: Dynamically generate the margin values using functions, mixins

--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
     <p class="mt-2">ValorCSS is a CSS framework that is designed to be simple and easy to use.</p>
     <p class="mt-2">It is currently in development and is not ready for use.</p>
     <p class="mt-1">Check back later for updates.</p>
+
+    <section class="mt-80px">
+    <p>lorem20</p>
+    <p class="mt-[200px]">lorem20</p>
+    </section>
 </body>
 </html>
