--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <p class="mt-2">It is currently in development and is not ready for use.</p>
     <p class="mt-1">Check back later for updates.</p>
 
-    <section class="mt-80px">
+    <section class="mt-8">
     <p>lorem20</p>
-    <p class="mt-[200px]">lorem20</p>
+    <p class="mt-12">lorem20</p>
     </section>
 </body>
 </html>
