--- a/examples/landing.html
+++ b/examples/landing.html
@@ -19,7 +19,7 @@
 
   <!-- Navigation -->
   <nav class="navbar bg-white shadow-sm">
-    <a href="#" class="navbar__brand">ValorCSS</a>
+    <a href="../index.html" class="navbar__brand">ValorCSS</a>
     <ul class="navbar__nav">
       <li class="navbar__item">
         <a href="#features" class="navbar__link navbar__link--active">Features</a>
@@ -59,7 +59,7 @@
           <div class="text-sm opacity-75">Optimized Size</div>
         </div>
         <div>
-          <div class="text-4xl font-bold">13+</div>
+          <div class="text-4xl font-bold">14</div>
           <div class="text-sm opacity-75">Components</div>
         </div>
         <div>
@@ -153,7 +153,7 @@
     <div class="max-w-screen-lg mx-auto">
       <div class="text-center mb-16">
         <h2 class="text-4xl font-semibold text-gray-900 mb-4">Professional Components</h2>
-        <p class="text-lg text-gray-600">13 ready-to-use components for any project</p>
+        <p class="text-lg text-gray-600">14 ready-to-use components for any project</p>
       </div>
 
       <!-- Component Examples Grid -->
