refactor: migrate to packages/core structure
- Create packages/core/ for CSS framework
- Move src/, dist/, examples/, public/ to packages/core/
- Add packages/core/project.json with NX build targets
- Add packages/core/package.json as @valorcss/core
- Configure build, build:prod, build:purge, and watch targets
- Update CSS build to copy to public folder

Package structure:
- packages/core/src/ - SCSS source files
- packages/core/dist/ - Compiled CSS output
- packages/core/examples/ - HTML examples
- packages/core/public/ - Public assets

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ValorCSS - Modern CSS Framework Documentation</title>
-  <link rel="stylesheet" href="dist/main.css">
+  <link rel="stylesheet" href="packages/core/dist/main.css">
   <style>
     /* Custom styles for documentation hub */
     .hero-gradient {
@@ -144,7 +144,7 @@
         <a href="#getting-started" class="btn btn-lg bg-white text-primary">
           Get Started
         </a>
-        <a href="examples/components.html" class="btn btn-lg btn-outline-white border-white text-white">
+        <a href="packages/core/examples/components.html" class="btn btn-lg btn-outline-white border-white text-white">
           View Components
         </a>
       </div>
@@ -369,7 +369,7 @@ yarn build:prod</code></pre>
       </div>
 
       <div class="text-center mt-12">
-        <a href="examples/components.html" class="btn btn-primary btn-lg">
+        <a href="packages/core/examples/components.html" class="btn btn-primary btn-lg">
           View All Components →
         </a>
       </div>
@@ -396,7 +396,7 @@ yarn build:prod</code></pre>
               <span class="badge badge--primary">Interactive</span>
               <span class="badge badge--info">Code Samples</span>
             </div>
-            <a href="examples/components.html" class="btn btn-primary">View Example →</a>
+            <a href="packages/core/examples/components.html" class="btn btn-primary">View Example →</a>
           </div>
         </div>
 
@@ -411,7 +411,7 @@ yarn build:prod</code></pre>
               <span class="badge badge--success">Marketing</span>
               <span class="badge badge--info">Responsive</span>
             </div>
-            <a href="examples/landing.html" class="btn btn-primary">View Example →</a>
+            <a href="packages/core/examples/landing.html" class="btn btn-primary">View Example →</a>
           </div>
         </div>
 
@@ -426,7 +426,7 @@ yarn build:prod</code></pre>
               <span class="badge badge--warning">Admin</span>
               <span class="badge badge--info">Full Layout</span>
             </div>
-            <a href="examples/dashboard.html" class="btn btn-primary">View Example →</a>
+            <a href="packages/core/examples/dashboard.html" class="btn btn-primary">View Example →</a>
           </div>
         </div>
 
@@ -441,7 +441,7 @@ yarn build:prod</code></pre>
               <span class="badge badge--danger">Forms</span>
               <span class="badge badge--info">Validation</span>
             </div>
-            <a href="examples/forms.html" class="btn btn-primary">View Example →</a>
+            <a href="packages/core/examples/forms.html" class="btn btn-primary">View Example →</a>
           </div>
         </div>
       </div>
@@ -518,10 +518,10 @@ yarn build:prod</code></pre>
         <div>
           <h4 class="font-semibold mb-4">Examples</h4>
           <ul class="text-sm space-y-2">
-            <li><a href="examples/landing.html" class="opacity-75 hover:opacity-100">Landing Page</a></li>
-            <li><a href="examples/dashboard.html" class="opacity-75 hover:opacity-100">Dashboard</a></li>
-            <li><a href="examples/forms.html" class="opacity-75 hover:opacity-100">Forms</a></li>
-            <li><a href="examples/components.html" class="opacity-75 hover:opacity-100">Components</a></li>
+            <li><a href="packages/core/examples/landing.html" class="opacity-75 hover:opacity-100">Landing Page</a></li>
+            <li><a href="packages/core/examples/dashboard.html" class="opacity-75 hover:opacity-100">Dashboard</a></li>
+            <li><a href="packages/core/examples/forms.html" class="opacity-75 hover:opacity-100">Forms</a></li>
+            <li><a href="packages/core/examples/components.html" class="opacity-75 hover:opacity-100">Components</a></li>
           </ul>
         </div>
         <div>
