--- a/packages/core/examples/forms.html
+++ b/packages/core/examples/forms.html
@@ -10,7 +10,7 @@
 
   <!-- Navigation -->
   <nav class="navbar bg-white shadow-sm">
-    <a href="../index.html" class="navbar__brand">ValorCSS</a>
+    <a href="../../../index.html" class="navbar__brand">ValorCSS</a>
     <ul class="navbar__nav">
       <li class="navbar__item">
         <a href="landing.html" class="navbar__link">Home</a>
