--- a/packages/core/examples/landing.html
+++ b/packages/core/examples/landing.html
@@ -19,7 +19,7 @@
 
   <!-- Navigation -->
   <nav class="navbar bg-white shadow-sm">
-    <a href="../index.html" class="navbar__brand">ValorCSS</a>
+    <a href="../../../index.html" class="navbar__brand">ValorCSS</a>
     <ul class="navbar__nav">
       <li class="navbar__item">
         <a href="#features" class="navbar__link navbar__link--active">Features</a>
